# CarboKitten.jl

./: .brei_history  .editorconfig  .gitignore  Artifacts.toml  CITATION.cff  CONTRIBUTING.md  Makefile  Manifest.toml  Project.toml  README.md  Tutorial_Notebook.jl  brei.toml  current_branch_files.txt  entangled.toml  figures.mk  pyproject.toml  run_extension_example.jl  waveformulation_250_vs_main.diff  waveformulation_files.txt
.entangled/: filedb.json  tasks.json
data/: Cenozoic_sea_level_reconstruction.tab  blue-to-red.pal  bs92-sealevel-curve.csv  cat.pgm  cat256.pgm
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Manifest.toml  Project.toml  Tutorials.md  component_graphs.jl  make.jl
docs_extension/: Project.toml  make.jl
examples/: alcaps-tutorial.jl  autocycles.jl  bosscher-schlager-1992.jl  burgess-2013-ca.jl  burgess2013-fig2.gnuplot  ca-with-prod.jl  cap-extSL.jl  cap-slope.jl  caps-miller-emp.jl  caps-miller-phys.jl  caps-miller.jl  caps-miller_diss.jl  caps-osc.jl  caps-test.jl  gpu-test.jl  insolation.jl  notebook.jl  peak-transport.jl  plot-cap-extSL.jl  plot-cap-slope.jl  plot-caps-miller.jl  plot-caps-osc.jl  plot-tanh.gnuplot  sealevel-curve-extraction.jl  subsidence.jl  tabular-sea-level.jl  visualize_production.jl
ext/: AgeDepthModel.jl  Build_coord.jl  Colormap.jl  EnvCAPPlotting.jl  FaciesColumn.jl  FenceDiagrams.jl  FencePlots.jl  GlamourView.jl  HorizontalMap.jl  MapView.jl  ProductionCurve.jl  Resample.jl  SedimentProfile.jl  StratigraphicColumn.jl  SummaryPlot.jl  SummaryPlotFromState.jl  VisualizationExt.jl  WheelerColumn.jl  WheelerDiagram.jl
notebooks/: component-graph.jl  components.jl  data-export.jl  dsl.jl  interpolation.jl  miller-curve.jl  onshore-run.jl  onshore-test.jl  onshore.jl  phyero_notebook.jl  plot3d.jl  plotting backup 1.jl  plotting.jl  plotting_erosion.jl  sediment-stack.jl  skeleton.jl  spec.jl  summary_plot.jl  test.csv  transport.jl  ui.jl  visualization.jl  wheeler-diagram.jl
src/: BS92.jl  BoundaryTrait.jl  Boxes.jl  Burgess2013.jl  CATP.jl  CaProd.jl  CaProdErosion.jl  CarbDissolution.jl  CarboKitten.jl  Components.jl  Config.jl  DSL.jl  DataSets.jl  Denudation.jl  DepthStats.jl  EmpericalDenudation.jl  Erosion.jl  Erosion2.jl  Export.jl  FaciesClassification.jl  ForwardModel.jl  InputConfig.jl  MemoryWriter.jl  OutputData.jl  PatchStats.jl  PhysicalErosion.jl  Production.jl  RunExtension.jl  RunModel.jl  Stencil.jl  (+19 more)
(+479 files in other folders)
