[tool.poetry]
name = "carbokitten"
version = "0.1.0"
description = "Development environment for CarboKitten. This is not an actual Python package."
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache-2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
entangled-cli = {git = "https://github.com/entangled/entangled.py", rev = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.brei]
include = [".entangled/tasks.json"]

[tool.brei.runner.julia]
command = "julia"
args = ["--project=workenv", "--startup-file=no", "-e", "using DaemonMode; runexpr(\"include(\\\"${script}\\\")\")"]
# args = ["+1.11", "--project=workenv", "${script}"]

[[tool.brei.task]]
name = "copy_figures"
requires = ["#figures"]
script = "rsync -avh docs/src/_fig/ docs/src/fig/"
