[project]
name = "carbokitten"
version = "0.1.0"
description = "Development environment for CarboKitten. This is not an actual Python package."
authors = [{ name = "Johan Hidding", email = "j.hidding@esciencecenter.nl" }]
requires-python = "~=3.14"
readme = "README.md"
license = "Apache-2"
dependencies = [
    "entangled-cli",
]

[tool.uv]
package = false

[tool.uv.sources]
entangled-cli = { git = "https://github.com/entangled/entangled.py" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.brei]
include = [".entangled/tasks.json"]

[tool.brei.runner.julia]
command = "julia"
args = ["--project=workenv", "${script}"]
# args = ["--project=workenv", "--startup-file=no", "-e", "using DaemonMode; runexpr(\"include(\\\"${script}\\\")\")"]

[[tool.brei.task]]
name = "copy_figures"
requires = ["#figures"]
script = "rsync -avh docs/src/_fig/ docs/src/fig/"
